// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`REQ-008 #75 golden behavior (MessageHandler WS send sequence) > a) thinking + done → complete 1`] = `
[
  {
    "data": {
      "msgId": 1,
      "timestamp": "<timestamp:number>",
    },
    "type": "ACK",
  },
  {
    "data": {
      "fromUid": 999,
      "roomId": 1,
      "triggerMsgId": "1",
    },
    "type": "THINKING_START",
  },
  {
    "data": {
      "content": "reason-1",
      "durationMs": "<durationMs:number>",
      "status": "complete",
      "thinkingId": undefined,
    },
    "type": "THINKING_END",
  },
]
`;

exports[`REQ-008 #75 golden behavior (MessageHandler WS send sequence) > b) deltas + done only → complete, no skipReason 1`] = `
[
  {
    "data": {
      "msgId": 2,
      "timestamp": "<timestamp:number>",
    },
    "type": "ACK",
  },
  {
    "data": {
      "fromUid": 999,
      "roomId": 1,
      "triggerMsgId": "2",
    },
    "type": "THINKING_START",
  },
  {
    "data": {
      "content": "just thinking",
      "durationMs": "<durationMs:number>",
      "status": "complete",
      "thinkingId": undefined,
    },
    "type": "THINKING_END",
  },
]
`;

exports[`REQ-008 #75 golden behavior (MessageHandler WS send sequence) > c) error 1`] = `
[
  {
    "data": {
      "msgId": 3,
      "timestamp": "<timestamp:number>",
    },
    "type": "ACK",
  },
  {
    "data": {
      "fromUid": 999,
      "roomId": 1,
      "triggerMsgId": "3",
    },
    "type": "THINKING_START",
  },
  {
    "data": {
      "content": "partial-work",
      "durationMs": "<durationMs:number>",
      "error": "boom",
      "status": "error",
      "thinkingId": undefined,
    },
    "type": "THINKING_END",
  },
]
`;

exports[`REQ-008 #75 golden behavior (MessageHandler WS send sequence) > d) two thinking deltas concatenated 1`] = `
[
  {
    "data": {
      "msgId": 4,
      "timestamp": "<timestamp:number>",
    },
    "type": "ACK",
  },
  {
    "data": {
      "fromUid": 999,
      "roomId": 1,
      "triggerMsgId": "4",
    },
    "type": "THINKING_START",
  },
  {
    "data": {
      "content": "foobar",
      "durationMs": "<durationMs:number>",
      "status": "complete",
      "thinkingId": undefined,
    },
    "type": "THINKING_END",
  },
]
`;
